# ollama-classifier-gui

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: rtd-publish.yml  test.yml
docs/: api.md  configuration.md  index.md  installation.md  usage.md
src/ollama_classifier_gui/: __init__.py  app.py  main.py  utils.py
tests/: test_smoke.py
