[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-classifier-gui"
version = "0.4.0"
description = "A desktop GUI application for text classification using LLMs (Ollama, vLLM, SGLang, llama.cpp)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Luigi Palumbo"},
    { name = "Mengting Yu"}
]
keywords = ["ollama", "classifier", "text-classification", "llm", "flet", "gui", "vllm", "sglang", "llama-cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "flet>=0.84.0",
    "flet-secure-storage>=0.84.0",
    "ollama-classifier[ollama]>=0.4.0",
    "polars>=1.40.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.0",
    "pyshortcuts>=1.9.7",
]

[project.scripts]
ollama-classifier-gui = "ollama_classifier_gui.main:main"

[project.urls]
Homepage = "https://github.com/paluigi/ollama-classifier-gui"
Repository = "https://github.com/paluigi/ollama-classifier-gui"
Issues = "https://github.com/paluigi/ollama-classifier-gui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_classifier_gui"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
